--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,10 +1,8 @@
-#set -g default-terminal "tmux-256color"
 set -g default-terminal "xterm-256color"
-#set -ga terminal-overrides ",*256col*:Tc"
 set -ga terminal-overrides ",xterm-256color:Tc"
 # action key
 unbind C-b
-set-option -g prefix C-b
+set-option -g prefix C-m
 set-option -g repeat-time 0
 set-option -g focus-events on
 
@@ -90,6 +88,7 @@ source ~/.config/tmux/utility.conf
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'egel/tmux-gruvbox'
@@ -97,5 +96,33 @@ set -g @tmux-gruvbox 'dark' # or 'light'
 
 run '~/.config/tmux/plugins/tpm/tpm'
 
-set-option -g default-shell /opt/homebrew/bin/fish
+set-option -g default-shell /usr/bin/fish
 set -g default-terminal "tmux-256color"
+set-option -g set-clipboard on
+
+# Enable vi mode in tmux
+setw -g mode-keys vi
+
+# Bind "y" in copy-mode-vi to copy to clipboard via OSC 52
+#bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "tmux save-buffer - | osc52-clip"
+
+# Bind normal "y" in normal mode to copy current line to clipboard
+#bind-key y run "tmux save-buffer - | osc52-clip"
+set -g prefix C-m
+unbind C-b
+bind C-m send-prefix
+
+set-option -g set-clipboard on
+set-option -g terminal-overrides 'xterm*:clipboard:ccopy,ccut'
+
+# Enable clipboard integration
+set-option -g set-clipboard on
+
+# Bind 'y' in copy mode to copy to local clipboard via OSC 52
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "/bin/copy-osc52.sh"
+
+# Allow applications inside tmux to pass through escape sequences
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+set -g allow-passthrough on
+
+
