--- a/tmux/tmux/tmux.conf
+++ b/tmux/tmux/tmux.conf
@@ -1,105 +1,78 @@
-set -g default-terminal "xterm-256color"
+# Set terminal to tmux-256color for better compatibility within tmux
+set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
-# action key
+
+# Enable clipboard integration for OSC52
+set-option -g set-clipboard on
+
+# Set the prefix to Ctrl-g
 unbind C-b
-set-option -g prefix C-m
-set-option -g repeat-time 0
-set-option -g focus-events on
+set-option -g prefix C-g
+bind C-g send-prefix
 
-#### Key bindings
-# set-option -g default-shell /opt/homebrew/bin/fish
-
+# Key bindings for navigation and resizing panes
 set-window-option -g mode-keys vi
 
-#bind t send-key C-t
-# Reload settings
-bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
-# Open current directory
-bind o run-shell "open #{pane_current_path}"
-bind -r e kill-pane -a
+bind k select-pane -U
+bind j select-pane -D
+bind h select-pane -L
+bind l select-pane -R
 
-# vim-like pane switching
-bind k select-pane -U 
-bind j select-pane -D 
-bind h select-pane -L 
-bind l select-pane -R 
-
-# Moving window
-bind-key -n C-S-Left swap-window -t -1 \; previous-window
-bind-key -n C-S-Right swap-window -t +1 \; next-window
-
-# Resizing pane
 bind -r C-k resize-pane -U 5
 bind -r C-j resize-pane -D 5
 bind -r C-h resize-pane -L 5
 bind -r C-l resize-pane -R 5
 
-#### basic settings
+# Reload tmux configuration
+bind r source-file ~/.config/tmux/tmux.conf \; display "Config reloaded!"
 
+# Swap and move windows with shortcuts
+bind-key -n C-S-Left swap-window -t -1 \; previous-window
+bind-key -n C-S-Right swap-window -t +1 \; next-window
+
+# Copy selection to clipboard using Y in copy mode with OSC52 via custom script
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "~/.tmux/copy.sh"
+
+# Basic settings
+set-option -g focus-events on
+set-option -g repeat-time 0
+set-option -g history-limit 64096
+set -sg escape-time 10
+
+# Look and feel
 set-option -g status-justify "left"
-#set-option utf8-default on
-#set-option -g mouse-select-pane
-set-window-option -g mode-keys vi
-#set-window-option -g utf8 on
-# look'n feel
-set-option -g status-fg cyan
-set-option -g status-bg black
+set-option -g status-style bg=colour235,fg=colour136
+set-window-option -g window-status-style fg=colour244,bg=colour234,dim
+set-window-option -g window-status-current-style fg=colour166,bg=default,bright
+set-option -g pane-border-style fg=colour235
+set-option -g pane-active-border-style fg=colour136,bg=colour235
+set-option -g message-style bg=colour235,fg=colour166
+set-option -g display-panes-active-colour colour33
+set-option -g display-panes-colour colour166
+set-window-option -g clock-mode-colour colour64
 set -g pane-active-border-style fg=colour166,bg=default
 set -g window-style fg=colour10,bg=default
 set -g window-active-style fg=colour12,bg=default
-set-option -g history-limit 64096
 
-set -sg escape-time 10
-
-#### COLOUR
-
-# default statusbar colors
-set-option -g status-style bg=colour235,fg=colour136,default
-
-# default window title colors
-set-window-option -g window-status-style fg=colour244,bg=colour234,dim
-
-# active window title colors
-set-window-option -g window-status-current-style fg=colour166,bg=default,bright
-
-# pane border
-set-option -g pane-border-style fg=colour235 #base02
-set-option -g pane-active-border-style fg=colour136,bg=colour235
-
-# message text
-set-option -g message-style bg=colour235,fg=colour166
-
-# pane number display
-set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #orange
-
-# clock
-set-window-option -g clock-mode-colour colour64 #green
-
-# allow the title bar to adapt to whatever host you connect to
+# Title adaptation
 set -g set-titles on
 set -g set-titles-string "#T"
 
-# import
+# Source additional configuration files
 if-shell "uname -s | grep -q Darwin" "source ~/.config/tmux/macos.conf"
-
 source ~/.config/tmux/statusline.conf
 source ~/.config/tmux/utility.conf
 
+# Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'egel/tmux-gruvbox'
-set -g @tmux-gruvbox 'dark' # or 'light'
+set -g @tmux-gruvbox 'dark'
 
+# Initialize tmux plugin manager
 run '~/.config/tmux/plugins/tpm/tpm'
 
+# Set default shell
 set-option -g default-shell /usr/bin/fish
-set -g default-terminal "tmux-256color"
-
-set -g prefix C-m
-unbind C-b
-bind C-m send-prefix
-
 
